@@ -1,3 +1,4 @@
+mobac.mapsources.mappacks.openstreetmap.Cloudmate
 mobac.mapsources.mappacks.openstreetmap.Mapnik
 mobac.mapsources.mappacks.openstreetmap.TilesAtHome
 mobac.mapsources.mappacks.openstreetmap.CycleMap
